First working version

--- a/templates/ovirt-config.j2
+++ b/templates/ovirt-config.j2
@@ -1,4 +1,4 @@
-ovirt_url: "{{ engine_api_url }}"
+ovirt_url: "{{ engine_url }}"
 ovirt_username: "{{ engine_user }}"
 ovirt_password: "{{ engine_password }}"
 ovirt_ca_bundle: |-
